Fix In The News images from overflowing container

--- a/web/wp-content/themes/cncf-twenty-two/source/scss/components/_posts.scss
+++ b/web/wp-content/themes/cncf-twenty-two/source/scss/components/_posts.scss
@@ -162,7 +162,7 @@
 				height: 90%;
 				object-fit: contain;
 				filter: none;
-
+				margin-bottom: 0;
 				@media (min-width: 768px) {
 					height: 180px;
 					padding: 1rem 0;
